--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,8 @@
 }
 
 button,
-input[type="text"] {
+input[type="text"],
+input[type="number"] {
   border-radius: 4px;
   padding: 0.25rem 0.5rem;
   border: 2px solid black;
