--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,16 +9,7 @@
   box-sizing: border-box;
 }
 
-:root {
-  font-size: 1.25rem;
-  font-family: "Inter", sans-serif;
-  background-color: #fafafa;
-}
-
-button,
-input[type="text"],
-input[type="number"] {
-  border-radius: 4px;
-  padding: 0.25rem 0.5rem;
-  border: 2px solid black;
+html,body {
+  max-width: 80ch;
+  margin: auto;
 }
